examples/test/testpolicy15639.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15639
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key11: value16
      key45: value6
      key27: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value40
          key3: value41
      podSelector:
        matchLabels:
          key8: value10
